--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -1,11 +1,18 @@
-<h1>To Do List</h1>
 @using ToDoList.Models
+<h1>To Do List</h1>
+@if (Model.Count == 0)
+{
+  <p>There are no item in the List.</p>
+}
 <ul>
-    @foreach(Item item in Model)
+    @foreach (Item item in Model)
     {
-  <li>@Html.DisplayFor(ModelItem => item.Description)</li>
+      <li><a href='/items/@item.Id'>@item.Description</a></li>
     }
 </ul>
-<h1>Welcome to the To Do List!</h1>
+
 <a href='/items/new'>Add a new item</a>
-<a href='/items'>See list of items</a>
+
+<form action="/items/delete" method="post">
+  <button type="submit" name="button">Clear All Items</button>
+</form>
